--- a/student/StartScreen/StartScreenViewController.xib
+++ b/student/StartScreen/StartScreenViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,36 +18,51 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="UNiDAYS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfv-Cy-2LK">
-                    <rect key="frame" x="16" y="20" width="343" height="68"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UNiDAYS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cfv-Cy-2LK">
+                    <rect key="frame" x="20" y="20" width="374" height="68"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="68" id="e3B-oG-M8E"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="85"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZM-3Z-h1k">
-                    <rect key="frame" x="117" y="150" width="140" height="140"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZM-3Z-h1k">
+                    <rect key="frame" x="117" y="150" width="179" height="140"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="140" id="ZML-wD-vIz"/>
+                    </constraints>
+                    <state key="normal" title="Upload"/>
                     <connections>
                         <action selector="uploadStoredData" destination="-1" eventType="touchUpInside" id="s3d-MM-wGP"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lbN-iG-IEG">
-                    <rect key="frame" x="117" y="375" width="140" height="140"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lbN-iG-IEG">
+                    <rect key="frame" x="117" y="375" width="179" height="209"/>
+                    <state key="normal" title="New student"/>
                     <connections>
                         <action selector="createNewStudent" destination="-1" eventType="touchUpInside" id="8ic-KV-zUL"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="lbN-iG-IEG" firstAttribute="top" secondItem="JZM-3Z-h1k" secondAttribute="bottom" constant="85" id="23s-IC-Jbn"/>
+                <constraint firstItem="cfv-Cy-2LK" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="6gC-Yg-2PG"/>
+                <constraint firstItem="JZM-3Z-h1k" firstAttribute="top" secondItem="cfv-Cy-2LK" secondAttribute="bottom" constant="62" id="VRo-hm-Jz6"/>
+                <constraint firstItem="JZM-3Z-h1k" firstAttribute="leading" secondItem="lbN-iG-IEG" secondAttribute="leading" id="bXJ-dZ-gQq"/>
+                <constraint firstItem="cfv-Cy-2LK" firstAttribute="centerX" secondItem="JZM-3Z-h1k" secondAttribute="centerX" id="cYa-H4-591"/>
+                <constraint firstItem="JZM-3Z-h1k" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="117" id="gck-Vv-lys"/>
+                <constraint firstItem="cfv-Cy-2LK" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="gk3-75-bKM"/>
+                <constraint firstItem="JZM-3Z-h1k" firstAttribute="trailing" secondItem="lbN-iG-IEG" secondAttribute="trailing" id="kcS-05-Wvi"/>
+                <constraint firstItem="cfv-Cy-2LK" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="qy9-B4-nR5"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="lbN-iG-IEG" secondAttribute="bottom" constant="152" id="xLN-yK-GmW"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
+            <point key="canvasLocation" x="44" y="-111"/>
         </view>
     </objects>
 </document>
